[package]
name = "wtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.3.8", features = ["cargo"] }
now = "0.1.3"
sqlite = "0.30.4"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color"] }
